# KapsulRover

./: README.md
src/kapsul_rover/: CMakeLists.txt  package.xml
src/kapsul_rover/config/: joint_names_rover_urdf.yaml
src/kapsul_rover/launch/: .full.launch.swn  .full.launch.swo  arm.launch  d_cam.launch  display.launch  drill.launch  drive.launch  full.launch  gazebo.launch  gps.launch  joy_to_cmd.launch  lc.launch
src/kapsul_rover/meshes/: imu.STL  lidar.STL  sag_taraf_mafsal.STL  sol_taraf_mafsal.STL  suspansiyon.STL
src/kapsul_rover/scripts/: indicator.py
src/kapsul_rover/src/: joystick.py  utm_odometry_node.cpp
src/kapsul_rover/urdf/: kapsul.xacro  model.xacro  skid_steer.gazebo
src/luminous_description/urdf/: luminous.xacro  luminous_description.xacro  plugins.gazebo
src/luminous_navigation/launch/: amcl.launch  gmapping.launch  rtab.launch
src/luminous_navigation/scripts/: bug2.py  follow_wall.py  go_to_point.py  gps_goal.py  obstacle_avoidance.py  reading_laser.py
