<package format="2">
  <name>kapsul_rover</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for kapsul_rover</p>
    <p>This package contains configuration data, 3D models and launch files
for kapsul_rover robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>